# agrosarthi_openrl

./: .gitignore  Dockerfile  README.md  app.py  design_doc.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  setup.py  test.py  test_env.py  test_server.py  verify_imports.py
AgroSarthiEnv/: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test.py
AgroSarthiEnv/agrosarthi_rl_env/: constants.py  env.py  grader.py  models.py  reward.py
AgroSarthiEnv/agrosarthi_rl_env/tasks/: easy.py  hard.py  medium.py
AgroSarthiEnv/server/: AgroSarthiEnv_environment.py  Dockerfile  __init__.py  app.py
agrosarthi_rl_env/: __init__.py  crop_model.py  env.py  grader.py  weather_sim.py
agrosarthi_rl_env/tasks/: __init__.py  easy.py  hard.py  medium.py
server/: app.py
