[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agrosarthi_rl_env"
version = "1.0.0"
description = "OpenEnv-compatible agricultural RL environment"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "fastmcp>=0.1.0",
    "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git@v0.2.3",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
